Major Release: Security Hardening, Advanced UX Components, and Comprehensive Documentation
🔒 Security & Quality Enhancements:
- Added Dependabot configuration for automated dependency updates
- Implemented CodeQL analysis workflow for security vulnerability detection
- Added Scorecard workflow for supply chain security assessment
- Enhanced CI/CD pipeline with comprehensive security scanning

🎨 Advanced User Experience Components:
- New ExportPreviewModal for previewing export results before download
- FirstRunBanner for improved new user onboarding experience
- ProgressRail component for visual progress indication
- SafeModeChip for clear safe mode status indication

📚 Comprehensive Documentation Suite:
- Added QUICKSTART.md for rapid project setup and usage
- GOOD-FIRST-ISSUES.md to guide new contributors
- Enhanced README with latest feature documentation
- Updated SCREENSHOTS documentation

🚀 Core System Improvements:
- Enhanced backend services: adapters, models, ingestion, export, status monitoring
- Improved core calculation modules: EVM, risk scoring, ROI, status pack
- Advanced frontend architecture with better type safety
- New media assets: instant-demo.gif, instant-demo.mp4 with filter configuration

🔧 Development Infrastructure:
- Updated project configuration (pyproject.toml, requirements.txt)
- Enhanced ESLint configuration for code quality
- Improved test coverage with new export preview tests
- Updated media capture automation

This release significantly enhances security posture, user experience, and maintainability while adding powerful new capabilities for enterprise deployment!

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,9 +21,19 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
+          pip install "ruff==0.0.287"
 
-      - name: Backend tests
-        run: pytest
+      - name: Ruff lint
+        run: ruff check .
+
+      - name: Backend tests with coverage
+        run: pytest -q --cov=app --cov-report=term --cov-report=xml
+
+      - name: Upload coverage report
+        uses: actions/upload-artifact@v4
+        with:
+          name: python-coverage
+          path: coverage.xml
 
       - name: Set up Node.js
         uses: actions/setup-node@v4
@@ -36,11 +46,19 @@ jobs:
         working-directory: app/frontend
         run: npm ci
 
+      - name: Frontend lint
+        working-directory: app/frontend
+        run: npm run lint
+
       - name: Frontend tests
         working-directory: app/frontend
         run: npm test -- --run
         env:
           CI: true
+
+      - name: Frontend build
+        working-directory: app/frontend
+        run: npm run build
 
       - name: Frontend build
         working-directory: app/frontend
